// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSurfaceSelectionLayout > orientation test > shows horizontal 1`] = `
<div
  class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal"
>
  
  
</div>
`;

exports[`CdrSurfaceSelectionLayout > orientation test > shows vertical 1`] = `
<div
  class="cdr-surface-selection-layout cdr-surface-selection-layout--vertical"
>
  
  
</div>
`;

exports[`CdrSurfaceSelectionLayout > snapshot test > renders correctly 1`] = `
<div
  class="cdr-surface-selection-layout cdr-surface-selection-layout--horizontal"
>
  
  
</div>
`;
